@@ -43,4 +43,13 @@
   <table name="Thirty"	count="4" />
   <table name="Fourty"	count="4" />
 
+  <tournament name="sitngo4" 	count="3" />
+  <tournament name="sitngo8" 	count="7" />
+  <tournament name="sitngo20" 	count="19" />
+  <tournament name="sitngo50" 	count="49" />
+  <tournament name="Ositngo4" 	count="3" />
+  <tournament name="Ositngo8" 	count="7" />
+  <tournament name="Ositngo20" 	count="19" />
+  <tournament name="Ositngo50" 	count="49" />
+
 </settings>
